source/blender/blenkernel/intern/mesh_wrapper.cc
@@ -68,8 +68,7 @@ Mesh *BKE_mesh_wrapper_from_editmesh(BMEditMesh *em,
   /* Use edit-mesh directly where possible. */
   mesh->runtime->is_original_bmesh = true;
 
-  mesh->runtime->edit_mesh = static_cast<BMEditMesh *>(MEM_dupallocN(em));
-  mesh->runtime->edit_mesh->is_shallow_copy = true;
+  mesh->runtime->edit_mesh = std::make_shared<BMEditMesh>(*em);
 
   /* Make sure we crash if these are ever used. */
 #ifndef NDEBUG
@@ -110,7 +109,7 @@ void BKE_mesh_wrapper_ensure_mdata(Mesh *mesh)
         BLI_assert(mesh->runtime->edit_mesh != nullptr);
         BLI_assert(mesh->runtime->edit_data != nullptr);
 
-        BMEditMesh *em = mesh->runtime->edit_mesh;
+        BMEditMesh *em = mesh->runtime->edit_mesh.get();
         BM_mesh_bm_to_me_for_eval(*em->bm, *mesh, &mesh->runtime->cd_mask_extra);
 
         /* Adding original index layers here assumes that all BMesh Mesh wrappers are created from
